# book-to-anime

./: .dockerignore  .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  NOTICE  PLAN.md  README.md  config.example.yaml  pyproject.toml
docs/: costs.md  models.md  providers.md  troubleshooting.md
scripts/: run_local.py
src/booktoanime/: __init__.py  __main__.py  _dotenv.py  cli.py  errors.py
src/booktoanime/api/: __init__.py  app.py  deps.py  routes_files.py  routes_jobs.py  routes_sse.py  schemas.py
src/booktoanime/parsing/: __init__.py  image_extractor.py  models.py  ocr.py  pdf_parser.py
src/booktoanime/pipeline/: __init__.py  artifacts.py  events.py  image_explainer.py  image_renderer.py  manifest.py  mouth_animator.py  narrator_persona.py  orchestrator.py  panel_composer.py  srt_sidecar.py  stages.py  storyboard.py  style_seeder.py  styles.py  summarizer.py  topic_segmenter.py  tts_narrator.py  video_assembler.py
src/booktoanime/providers/: __init__.py  _retry.py  base.py  registry.py
src/booktoanime/providers/audio/: __init__.py  kokoro.py
src/booktoanime/providers/language/: __init__.py  _sdk_helpers.py  anthropic.py  deepseek.py  fireworks.py  gemini.py  groq.py  mistral.py  openai_compatible.py  together.py
src/booktoanime/providers/lipsync/: __init__.py  passthrough.py  replicate_hosted.py  sadtalker_local.py
src/booktoanime/providers/visual/: __init__.py  sdxl_diffusers.py
src/booktoanime/state/: __init__.py  db.py  job_repo.py  schema.sql
src/booktoanime/web/static/: app.css
src/booktoanime/web/templates/: _layout.html  index.html  job.html
tests/: conftest.py
tests/integration/: test_api_smoke.py  test_files_route.py  test_pipeline_smoke.py  test_real_ffmpeg.py
tests/unit/: test_anthropic_provider.py  test_artifacts_path_validation.py  test_dotenv.py  test_errors.py  test_gemini_provider.py  test_image_extractor.py  test_image_renderer.py  test_job_repo.py  test_kokoro_provider.py  test_models.py  test_mouth_animator.py  test_openai_compatible_provider.py  test_panel_composer.py  test_pdf_parser.py  test_preflight.py  test_providers_registry.py  test_renderer_resume.py  test_routes_sse.py  test_sdxl_provider.py  test_srt_sidecar.py  test_storyboard.py  test_style_seeder.py  test_vendor_wrappers.py  test_video_assembler.py
