[project]
name = "booktoanime"
version = "0.1.0"
description = "StudyPanels — convert PDF books into STEM motion-comic narrated explainer videos."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "StudyPanels contributors" }]
keywords = ["pdf", "study", "video", "tts", "diffusion", "stem"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

# Modules 1-7 runtime deps.
dependencies = [
  "pdfplumber>=0.11.0",
  "pypdf>=5.1.0",
  "Pillow>=10.0.0",
  "pydantic>=2.7.0",
  "pytesseract>=0.3.10",
  "platformdirs>=4.2.0",
  "httpx>=0.27.0",
  "tenacity>=9.0.0",
  "pyyaml>=6.0",
  "soundfile>=0.12.1",
  "numpy>=1.26.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sse-starlette>=2.1.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.12",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
# Native SDKs are opt-in extras so default install stays small.
openai-compat = ["openai>=1.50.0"]
anthropic = ["anthropic>=0.40.0"]
gemini = ["google-genai>=1.0.0"]
groq = ["groq>=0.13.0"]
all-providers = [
  "openai>=1.50.0",
  "anthropic>=0.40.0",
  "google-genai>=1.0.0",
  "groq>=0.13.0",
]
# TTS providers
kokoro = ["kokoro>=0.9.4", "torch>=2.2.0"]
# Image generation (SDXL + IP-Adapter)
visual = [
  "torch>=2.2.0",
  "diffusers>=0.30.0",
  "transformers>=4.44.0",
  "accelerate>=0.34.0",
  "safetensors>=0.4.5",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
  "pylint>=3.2.0",
  "mypy>=1.10.0",
  "coverage>=7.5.0",
  "reportlab>=4.2.0",
  "types-PyYAML>=6.0",
  "httpx>=0.27.0",
]

[project.scripts]
booktoanime = "booktoanime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/booktoanime"]
# Hatchling auto-includes non-Python files (templates/, static/) that live
# inside `packages = `, so we don't need a force-include block. Phase 3 will
# add `web/static/fonts/` under the same package tree.

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "slow: marks tests as slow",
  "needs_tesseract: requires Tesseract OCR binary on PATH",
  "real_ffmpeg: integration tests that require a real ffmpeg binary",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "N802"]
# FastAPI's `Form(...)` / `File(...)` / `Depends(...)` defaults are how it
# wires DI; ruff's B008 doesn't apply.
"src/booktoanime/api/routes_*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
